# wikicrawler

./: .gitignore  README.md  TODO.md  __main__.py  cacher.py  crawler.py  database.py  db.py  grabber.py  graph.py  graphviz.py  hopper.py  input_timeout.py  model_to_dict.py  para.py  paragrapher.py  parasenti.py  parasentiment.py  pyproject.toml  seeker.py  setup.cfg  wiki.py  wikidisambig.py
.github/workflows/: tests.yml
arbiter/: __init__.py  __main__.py  cli.py  oracle.py
async_prompt/: __main__.py
async_prompt/css/: app.css
core/: crawler.py  grabber.py  seeker.py
core/db/: cacher.py
core/sentiment/: paragraph.py
core/utils/: config.py  license.py
docs/: design.md  scripting.md
proto/: __main__.py  app.css
seer/utils/: graphviz.py
src/wikicrawler/: __main__.py
src/wikicrawler/arbiter/: __init__.py  __main__.py  app.py  cli.py  oracle.py  prompt.py  script.py  seer.py
src/wikicrawler/arbiter/utils/: frequency.py  other.py  search.py
src/wikicrawler/core/: crawler.py  grabber.py  seeker.py
src/wikicrawler/core/db/: cacher.py  database.py
src/wikicrawler/core/sentiment/: paragraph.py
src/wikicrawler/core/sentiment/utils/: dict_add.py
src/wikicrawler/core/utils/: config.py
src/wikicrawler/seer/: __init__.py  __main__.py  markdown.py
src/wikicrawler/seer/utils/: graph.py
tests/: test_arbiter.py
utils/: input_timeout.py  multitask.py  other.py
