[tool.poetry]
name = "wikicrawler"
version = "0.1.0"
description = "A crawler to aggregate data."
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
bs4 = "^0.0.1"
nltk = "^3.7"
rich = "^12.5.1"
pylatexenc = "^2.10"

[tool.poetry.group.dev.dependencies]
tox = "^3.26.0"
pytest = "^7.1.3"
build = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arbiter = "wikicrawler.arbiter:main"
