[tool.poetry]
name = "wikicrawler"
version = "0.1.0"
description = "A crawler to aggregate data."
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
bs4 = "^0.0.1"
nltk = "^3.7"
rich = "^12.5.1"
pylatexenc = "^2.10"

[tool.poetry.group.dev.dependencies]
tox = "^3.26.0"
pytest = "^7.1.3"
build = "^0.8.0"
mypy = "^0.981"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arbiter = "wikicrawler.arbiter:main"

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.8.0
envlist = py38, py39, py310, flake8, mypy
isolated_build = true

[gh-actions]
python =
    3.8: py36
    3.9: py38
    3.10: py310, mypy, flake8

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
deps =
    SQLAlchemy >= 1.4.41
    bs4 >= 0.0.1
    nltk >= 3.7
    rich >= 12.5.1
    pylatexenc >= 2.10

commands =
    pytest --basetemp={envtmpdir}

[testenv:flake8]
basepython = python3.10
deps = flake8
commands = flake8 src tests

[testenv:mypy]
basepython = python3.10
deps =
    tox >= 3.26.0
    pytest >= 7.1.3
    build >= 0.8.0
    mypy >= 0.981

commands = mypy src
"""