[tool.poetry]
name = "wikicrawler"
version = "0.1.0"
description = "A crawler to aggregate data."
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
SQLAlchemy = "^1.4.41"
bs4 = "^0.0.1"
nltk = "^3.7"
pylatexenc = "^2.10"
networkx = "^2.8.6"
matplotlib = "^3.6.0"
textual = "^0.17.1"
textual-autocomplete = {git = "https://github.com/darrenburns/textual-autocomplete.git"}
qtpy = "^2.3.1"
pyside2 = "^5.15.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
tox = "^3.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arbiter = "wikicrawler.arbiter:main"

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.8.0
envlist = py38, py39, py310, flake8, mypy
isolated_build = true
skip_missing_interpreters = true

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310, mypy, flake8

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
deps =
    pytest >= 7.1.3
    pytest-cov >= 4.0.0

commands =
    pytest --basetemp={envtmpdir}

[testenv:flake8]
basepython = python3.10
deps = flake8
commands = 
    - flake8 src tests

[testenv:mypy]
basepython = python3.10
deps =
    mypy >= 0.981

commands = 
    - mypy src
"""