[metadata]
name = wikicrawler
version = 0.0.2

[options]
install_requires =
    sqlalchemy
    bs4
    nltk
    rich
    inputimeout
    pylatexenc


package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    arbiter = wikicrawler.arbiter:main